# Metroidvania

./: .gitignore  CMakeLists.txt  main.cpp  main.h
data/configs/: tiles.cfg
data/maps/: Map1.map
include/: BaseState.h  EventManager.h  Game.h  SharedContext.h  StateManager.h  Window.h
include/Animation/: BaseAnimation.h  DirectionalAnimation.h  SpriteSheet.h
include/Game/: Map.h
include/General/: CustomHash.h  EventManager.h  Game.h  ResourceManager.h  ResourceManager.inl  SharedContext.h  StateManager.h  TextureManager.h  Utilities.h  Window.h
include/Map/: Map.h  Tiles.h
include/States/: BaseState.h  GameState.h  IntroState.h  MainMenuState.h  PausedState.h  State_Game.h  State_Intro.h  State_MainMenu.h  State_Paused.h
src/: BaseState.cpp  EventManager.cpp  Game.cpp  StateManager.cpp  Window.cpp  main.cpp
src/Animation/: BaseAnimation.cpp  DirectionalAnimation.cpp  SpriteSheet.cpp
src/General/: EventManager.cpp  Game.cpp  StateManager.cpp  TextureManager.cpp  Window.cpp
src/Map/: Map.cpp
src/States/: BaseState.cpp  GameState.cpp  IntroState.cpp  MainMenuState.cpp  PausedState.cpp  State_Game.cpp  State_Intro.cpp  State_MainMenu.cpp  State_Paused.cpp
